GH-511 Fix btn link whitespace on IE11

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -165,6 +165,7 @@ fieldset.danger {
 .btn.btn-link {
 	overflow: visible;
 	width: 100%;
+	white-space: normal;
 }
 
 .btn-group .radio-inline, .btn-group-vertical .radio-inline {
